# AI_Agent-Log_Analyzer

./: .chat_app_messages.sqlite  .dockerignore  .gitignore  BUSINESS_LOGIC.md  DB_PG17.py  DBlib.py  DBlib_postgres.py  Dockerfile  FAST_API_TEST_END_POINT.py  README.md  ST_DB_REDIS.py  chat_app_messages.sqlite  docker-compose.yml  main.py  my_snipets.ipynb  my_test.py  pyproject.toml  sample.env  schemas.py  sent_logs.ipynb  utilslib.py
DB_PROPOSAL/: db_postgres.py  db_postgres_simple.py  test_db.py
FASTAPI_FRAME/: main.py
LLM_Agent/: analitic_agent.py
LLM_Agents/: agentslib.py
Mock_Services/: sent_logs.ipynb
Mock_UI/: chat_app.html  chat_app.ts  styles.css
Mock_UI/chat_gpt_reverse_app/: main.py
Mock_UI/chat_gpt_reverse_app/static/: script.ts
Mock_UI/chat_gpt_reverse_app/templates/: index.html
Postgres_DB/: DB_PG17.py  db_con_snipet.ipynb  db_con_snipet.py
Postgres_DB/initdb/: docker-compose.yml  init_db.sql
Postgres_DB/initdb17/: docker-compose.yml
Redis_DB/: ST_DB_Redis.py
TEST_Sockets/: client.py  client_logs.txt  main.py  server.py
app/: config.py  deps.py  main.py  utilslib.py
app/LLM_Agents/: agentslib.py
app/Redis_DB/: ST_DB_Redis.py
app/chat/: repository.py  routes.py  schemas.py  service.py
app/llm/: agent.py
app/logs/: parsing.py  repository.py  routes.py  schemas.py  service.py  simulator.py
docs/: LLM_LINKS.md  REDIS_LOG_STORAGE.md
frontend/: chat_app.html  chat_app.ts
grafana/: docker-compose.yml  prometheus.yml
kafka_lab/: kafka_prod.py  print_logs.ipynb
static/: styles.css
