[project]
name = "AI_Agent_Log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "firelog>=0.1.0",
    "logfire[fastapi,sqlite3]>=3.16.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.1.10",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
